istio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sample-ns
  labels:
    istio-injection: enabled
