istio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-blue
  namespace: sample-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
      version: blue
  template:
    metadata:
      name: nginx
      labels:
        app: nginx
        version: blue
    spec:
      containers:
      - name: nginx
        image: nginx:1.13
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-green
  namespace: sample-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
      version: green
  template:
    metadata:
      name: nginx
      labels:
        app: nginx
        version: green
    spec:
      containers:
      - name: nginx
        image: nginx:1.13
        ports:
        - containerPort: 80
