istio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: sample-ns
  labels:
    name: nginx
spec:
  selector:
    app: nginx
  ports:
  - name: nginx
    protocol: TCP
    port: 40001
    targetPort: 80
