istio/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx-dr
  namespace: sample-ns
spec:
  host: nginx-svc
  subsets:
  - name: blue
    labels:
      version: blue
  - name: green
    labels:
      version: green
