istio/virtual-service-green.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-ds
  namespace: sample-ns
spec:
  gateways:
  - sample-gateway.istio-gw.svc.cluster.local
  hosts:
  - "sample.hoge.com"
  http:
  - match:
    - headers:
        x-version:
          exact: blue
    route:
    - destination:
        host: nginx-svc
        subset: blue
        port:
          number: 40001
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: nginx-svc
        subset: green
        port:
          number: 40001
